--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -105,7 +105,7 @@ test:
 production:
   sessions:
     default:
-      uri: <%= ENV['MONGO_URI'] %>
+      uri: <%= ENV['MONGOLAB_URI'] || ENV['MONGO_URI'] %>
       options:
         read: primary
         # In the test environment we lower the retries and retry interval to
